--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Facundo Torres
 #logo: /
-#description: 
-#show_downloads: true
-theme: jekyll-theme-responsive
+description: Data Analyst / BI Analyst
+show_downloads: true
+theme: jekyll-theme-cayman
